Added _ViewStart and _ViewImports to project. Some changes for name of namespaces (cohesion).

--- a/src/OdeToCoffee/Views/Home/Create.cshtml
+++ b/src/OdeToCoffee/Views/Home/Create.cshtml
@@ -1,5 +1,8 @@
-﻿@using OdeToCoffee.Models
-@model OdeToCoffee.Models.Coffeehouse
+﻿@model OdeToCoffee.Model.Entities.Coffeehouse
+
+@{
+    ViewBag.Title = "Create a coffehouse";
+}
 
 <div>
     <h1>Create</h1>
