--- a/src/OdeToCoffee/Views/Home/Index.cshtml
+++ b/src/OdeToCoffee/Views/Home/Index.cshtml
@@ -14,14 +14,19 @@
         @foreach (var coffeehouse in Model.Coffeehouses)
             {
             <tr>
-                <td>
-                    <a href="/home/details/@coffeehouse.Id">Details</a>
-                </td>
                 <td>@coffeehouse.Name</td>
+                <td>
+                    <a asp-controller="Home" asp-action="Details" asp-route-id="@coffeehouse.Id">Details</a>
+                    <a asp-action="Edit" asp-route-id="@coffeehouse.Id">Edit</a>
+                </td>
             </tr>
         }
     </table>
 </div>
+
+<br/>
+
+<a asp-controller="Home" asp-action="Create">Create</a>
 
 @section footer
 {
