--- a/src/OdeToCoffee/Views/Home/Index.cshtml
+++ b/src/OdeToCoffee/Views/Home/Index.cshtml
@@ -9,24 +9,18 @@
 
 <div>
     <h3>Kawiarnie: </h3>
-
-    <table>
-        @foreach (var coffeehouse in Model.Coffeehouses)
-            {
-            <tr>
-                <td>@coffeehouse.Name</td>
-                <td>
-                    <a asp-controller="Home" asp-action="Details" asp-route-id="@coffeehouse.Id">Details</a>
-                    <a asp-action="Edit" asp-route-id="@coffeehouse.Id">Edit</a>
-                </td>
-            </tr>
-        }
-    </table>
+    
+    @foreach (var coffeehouse in Model.Coffeehouses)
+    {
+        @Html.Partial("_Summary", coffeehouse)
+    }
 </div>
 
 <br/>
 
-<a asp-controller="Home" asp-action="Create">Create</a>
+<div>
+    <a asp-action="Create">Create</a>
+</div>
 
 @section footer
 {
