--- a/src/OdeToCoffee/Views/Home/Index.cshtml
+++ b/src/OdeToCoffee/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 <br/>
 
 <div>
-    <a asp-action="Create">Create</a>
+    <a class="btn btn-primary" asp-action="Create">Create</a>
 </div>
 
 @section footer
