--- a/src/OdeToCoffee/Views/Home/_Summary.cshtml
+++ b/src/OdeToCoffee/Views/Home/_Summary.cshtml
@@ -1,12 +1,12 @@
 ﻿@model OdeToCoffee.Model.Entities.Coffeehouse
 
-<section>
-    <h3>@Model.Name</h3>
-    <div>
+<section class="panel panel-default">
+    <h3 class="panel-heading">@Model.Name</h3>
+    <div class="panel-body">
         Style: @Model.Style
     </div>
-    <div>
-        <a asp-controller="Home" asp-action="Details" asp-route-id="@Model.Id">Details</a>
-        <a asp-controller="Home" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <div class="panel-footer">
+        <a class="btn btn-warning" asp-controller="Home" asp-action="Details" asp-route-id="@Model.Id">Details</a>
+        <a class="btn btn-info" asp-controller="Home" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
     </div>
 </section>
