--- a/src/OdeToCoffee/Views/Shared/Components/LoginLogout/Default.cshtml
+++ b/src/OdeToCoffee/Views/Shared/Components/LoginLogout/Default.cshtml
@@ -3,7 +3,7 @@
     <div>
         <span>Hello, @User.Identity.Name</span>
         <form method="post" asp-controller="Account" asp-action="Logout">
-            <input type="submit" value="Logout"/>
+            <input class="btn btn-default" type="submit" value="Logout"/>
         </form>
     </div>
 }
@@ -11,7 +11,7 @@ else
 {
     <div>
         <span>Annonymous</span>
-        <a asp-controller="Account" asp-action="Register">Register</a>
-        <a asp-controller="Account" asp-action="Login">Login</a>
+        <a class="btn btn-default" asp-controller="Account" asp-action="Register">Register</a>
+        <a class="btn btn-default" asp-controller="Account" asp-action="Login">Login</a>
     </div>
 }
