--- a/src/OdeToCoffee/Views/Shared/_Layout.cshtml
+++ b/src/OdeToCoffee/Views/Shared/_Layout.cshtml
@@ -4,17 +4,25 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
-        @await Component.InvokeAsync("LoginLogout")
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">OdeToCoffee</a>
+        </div>
+        <div class="navbar-right">
+            @await Component.InvokeAsync("LoginLogout")
+        </div>
     </div>
-    <div>
-        @RenderBody()
-    </div>
+</nav>  
+<div class="container">
+    @RenderBody()
     <footer>
         @RenderSection("footer", required: false)
         @await Component.InvokeAsync("Greeting")
     </footer>
+</div>
 </body>
 </html>
