--- a/src/OdeToCoffee/Views/Shared/_Layout.cshtml
+++ b/src/OdeToCoffee/Views/Shared/_Layout.cshtml
@@ -7,22 +7,25 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">OdeToCoffee</a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">OdeToCoffee</a>
+            </div>
+            <div class="navbar-right">
+                @await Component.InvokeAsync("LoginLogout")
+            </div>
         </div>
-        <div class="navbar-right">
-            @await Component.InvokeAsync("LoginLogout")
-        </div>
+    </nav>  
+    <div class="container">
+        @RenderBody()
+        <footer>
+            @RenderSection("footer", required: false)
+            @await Component.InvokeAsync("Greeting")
+        </footer>
     </div>
-</nav>  
-<div class="container">
-    @RenderBody()
-    <footer>
-        @RenderSection("footer", required: false)
-        @await Component.InvokeAsync("Greeting")
-    </footer>
-</div>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/node_modules/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="/node_modules/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </body>
 </html>
